third_party/blink/web_tests/external/wpt/resize-observer/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 28 in resize-observer, since `interface ResizeObserverEntry`:
 attribute sequence<ResizeObserverSize> borderBoxSize;
                                        ^ Attributes cannot accept sequence types"
Harness: the test ran to completion.

